# mem0-langgraph-customer-support-demo

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat-composer.tsx  chat-markdown.tsx  chat-thread.tsx  customer-panel.tsx  memory-admin.tsx  run-inspector.tsx
frontend/src/lib/: support-api.ts
static/: app.js  index.html  styles.css
support_agent/: __init__.py  api.py  classifier.py  config.py  graph.py  knowledge.py  memory.py  models.py  safety.py
tests/: test_support_agent.py
