[project]
name = "memory-first-support-agent"
version = "0.1.0"
description = "Memory-first customer support agent demo using Mem0, LangGraph, and FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-openrouter>=0.2.3",
    "langgraph>=0.2.0",
    "mem0ai>=0.1.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
